Improved the design, added natural spacing and fixed the OS icons' alignment at tablet-sizes.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2202,8 +2202,9 @@ input, select, textarea {
 			}
 
 				.features section .icon {
-					left: 1.5em;
-					top: 2em;
+					left: 0;
+					position: relative;
+					top: 0;
 				}
 
 		}
